* (bug 11555) Make editsection links come after section seadlines. This has no visible effect to graphical browsers,   but fixes the issue that headlines look like "[edit] Headline" in text browsers.

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -23,6 +23,7 @@ div#mw-js-message {
 .editsection {
 	float: right;
 	margin-left: 5px;
+	margin-top:-1.2em;
 }
 
 /**
